Fix the background

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 
 body {
     margin: auto;
-    background: url(../images/background.png) center;
+    background: url(https://github.com/AsteriskHunters/assets/blob/main/background.png?raw=true) center;
     background-size: cover;
     background-color: #000000;
 }
